# leavemanagementsystem

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: backend-test.yml  (+1 more)
Backend/: .coverage  .gitignore  config.toml  config.toml.example  insert_test_data.py  main.py  pyproject.toml  requirements-dev.txt
Backend/app/: main.py
Backend/app/api/: deps.py
Backend/app/api/v1/: auth.py  courses.py  export.py  files.py  import_data.py  leaves.py  reviewers.py  router.py  status.py  student_courses.py  students.py  teachers.py
Backend/app/config/: settings.py
Backend/app/database/: connection.py  manager.py
Backend/app/models/: __init__.py  admin.py  course.py  leave.py  login.py  reviewer.py  role.py  school.py  student.py  student_course.py  teacher.py
Backend/app/schemas/: __init__.py  admin.py  leave.py  login.py  pagination.py  reviewer.py  student.py  student_course.py  teacher.py
Backend/app/services/: auth.py  common.py  course.py  export.py  file.py  import_service.py  leave.py  reviewer.py  role.py  school.py  student.py  student_course.py  teacher.py
Backend/app/utils/: password.py
Backend/tests/: conftest.py  test_api.py  test_auth.py
Document/: main.typ  工作日志.typ
Frontend/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
Minipro-cli/: .gitignore  IFLOW.md  README.md  babel.config.js  build.js  package-lock.json  package.json  postcss.config.js  project.config.json  project.private.config.json  tsconfig.json
application/: package-lock.json  package.json
(+90 files in other folders)
